syntax = "proto3";

package auth;

option go_package = "shared/proto/auth;auth";

// ---- Service ----

service AuthService {
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
}

// ---- Requests ----

message GetUserByIdRequest {
  int32 user_id = 1;
}

message GetUserByIdResponse {
  User user = 1;
}
message User {
    int32 id = 1;
    string name =2;
    string email =3;
    repeated Role roles = 4;
    

}
message Role {
    int32 id = 1;
    string name = 2;
    bool isActive = 3;
}

